--- a/app/src/main/res/layout/activity_cedula2.xml
+++ b/app/src/main/res/layout/activity_cedula2.xml
@@ -13,7 +13,7 @@
         android:id="@+id/formulario_datosBasicos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
