--- a/app/src/main/res/layout/activity_cedula2.xml
+++ b/app/src/main/res/layout/activity_cedula2.xml
@@ -3292,7 +3292,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="27dp"
+                android:layout_height="40dp"
                 android:background="@color/blanco"
                 android:gravity="center"
                 android:orientation="vertical"
@@ -3963,7 +3963,7 @@
                     android:layout_marginRight="20dp"
                     android:background="@color/blanco"
                     android:gravity="left"
-                    android:text="Especialidad"
+                    android:text="Tipo de capacitacion"
                     android:textColor="@color/negro"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -4293,7 +4293,7 @@
                     android:layout_marginRight="20dp"
                     android:background="@color/blanco"
                     android:gravity="left"
-                    android:text="Especialidad"
+                    android:text="Tipo de capacitacion"
                     android:textColor="@color/negro"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -4579,7 +4579,27 @@
                     android:background="@drawable/palomita"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/caja_borrar_otraCapa3"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="@color/blanco"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/borrar_otraCapa3"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="15dp"
+                    android:layout_marginTop="30dp"
+                    android:text="Borrar Otra Capacitacion"
+                    android:textColor="@color/negro"
+                    android:gravity="center"/>
 
+
+            </LinearLayout>
             <LinearLayout
                 android:id="@+id/caja_siguiente_scroll2"
                 android:layout_width="match_parent"
@@ -4633,7 +4653,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="27dp"
+            android:layout_height="40dp"
             android:background="@color/blanco"
             android:gravity="center"
             android:orientation="vertical"
@@ -4939,7 +4959,7 @@
                 android:background="@drawable/palomita"/>
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/caja_anuncio_horasActua2"
+            android:id="@+id/caja_anuncio_tipoActua2"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="27dp"
@@ -5014,7 +5034,7 @@
                 android:background="@drawable/palomita"/>
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/caja_anuncio_actua2"
+            android:id="@+id/caja_anuncio_actuaInts2"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="27dp"
@@ -5090,7 +5110,7 @@
                 android:background="@drawable/palomita"/>
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/caja_anuncio_instPaisActua2"
+            android:id="@+id/caja_anuncio_anoActua2"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="27dp"
@@ -5238,26 +5258,7 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/palomita"/>
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/caja_agregar_otraActua2"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@color/blanco"
-            android:gravity="center"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/agregar_otraActua2"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="15dp"
-                android:layout_marginTop="30dp"
-                android:text="Agregar otra Especcialidad"
-                android:textColor="@color/negro"
-                android:gravity="center"/>
-        </LinearLayout>
         <LinearLayout
             android:id="@+id/caja_agregar_otraActua"
             android:layout_width="match_parent"
@@ -5277,7 +5278,35 @@
                 android:textColor="@color/negro"
                 android:gravity="center"/>
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/caja_borrar_otraActua"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:background="@color/blanco"
+            android:gravity="center"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/borrar_otraActua"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:text="Borrar Otra Actuaizacion"
+                android:textColor="@color/negro"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/agregar_otraActua2"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:text="Agregar otra Actualizacion"
+                android:textColor="@color/negro"
+                android:gravity="center"/>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/caja_anuncio_actua3"
@@ -5294,7 +5323,7 @@
                 android:layout_marginRight="20dp"
                 android:background="@color/blanco"
                 android:gravity="left"
-                android:text="Especialidad"
+                android:text="Actualizacion"
                 android:textColor="@color/negro"
                 android:textSize="20dp" />
         </LinearLayout>
@@ -5376,7 +5405,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/caja_edit_actua3"
+            android:id="@+id/caja_edit_intactua3"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_margin="10dp"
@@ -5590,12 +5619,21 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/agregar_agregar_otraactua3"
+                android:id="@+id/agregar_otraactua3"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
-                android:text="Agregar otra Especcialidad"
+                android:text="Agregar otra Actualizacion"
+                android:textColor="@color/negro"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/borrar_otraactua3"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:text="Borrar actualizacion"
                 android:textColor="@color/negro"
                 android:gravity="center"/>
         </LinearLayout>
