--- a/app/src/main/res/layout/activity_cedula2.xml
+++ b/app/src/main/res/layout/activity_cedula2.xml
@@ -5652,7 +5652,7 @@
                 android:layout_marginRight="20dp"
                 android:background="@color/blanco"
                 android:gravity="left"
-                android:text="Especialidad"
+                android:text="Actualizacion"
                 android:textColor="@color/negro"
                 android:textSize="20dp" />
         </LinearLayout>
@@ -5937,7 +5937,27 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/palomita"/>
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/caja_borrar_otraactua4"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:background="@color/blanco"
+            android:gravity="center"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/borrar_otraactua4"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:text="Borrar otra Actualizacion"
+                android:textColor="@color/negro"
+                android:gravity="center"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/caja_siguiente_scroll3"
@@ -6617,6 +6637,16 @@
                     android:text="Agregar otra Gestion Acadmica"
                     android:textColor="@color/negro"
                     android:gravity="center"/>
+                <TextView
+                    android:id="@+id/borrar_otraGesAca2"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="15dp"
+                    android:layout_marginTop="30dp"
+                    android:text="Borrar Otra Actuaizacion"
+                    android:textColor="@color/negro"
+                    android:gravity="center"/>
+
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/caja_agregar_otraGesAca"
@@ -6955,7 +6985,16 @@
                     android:layout_height="50dp"
                     android:layout_margin="15dp"
                     android:layout_marginTop="30dp"
-                    android:text="Agregar otra Especcialidad"
+                    android:text="Agregar otra Gestion"
+                    android:textColor="@color/negro"
+                    android:gravity="center"/>
+                <TextView
+                    android:id="@+id/borrar_otraGesAca3"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="15dp"
+                    android:layout_marginTop="30dp"
+                    android:text="Borrar Otra Gestion"
                     android:textColor="@color/negro"
                     android:gravity="center"/>
             </LinearLayout>
@@ -7260,7 +7299,27 @@
                     android:layout_marginTop="30dp"
                     android:background="@drawable/palomita"/>
             </LinearLayout>
+            <LinearLayout
+                android:id="@+id/caja_borrar_otraGesAca4"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="@color/blanco"
+                android:gravity="center"
+                android:orientation="horizontal">
 
+
+                <TextView
+                    android:id="@+id/borrar_otraGesAca4"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="15dp"
+                    android:layout_marginTop="30dp"
+                    android:text="Borrar Otra Gestion"
+                    android:textColor="@color/negro"
+                    android:gravity="center"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/caja_siguiente_scroll4"
@@ -7289,6 +7348,7 @@
                     android:textColor="@color/negro"
                     android:gravity="center"/>
             </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
     <ScrollView
