--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="negro">#000000</color>
     <color name="blanco">#FFFFFF</color>
+    <color name="azul">#0d5c99</color>
 </resources>
