--- a/app/src/main/res/layout/activity_partes_formulario.xml
+++ b/app/src/main/res/layout/activity_partes_formulario.xml
@@ -102,6 +102,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/ir_productosAca"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:background="@drawable/border_azul"
@@ -120,6 +121,7 @@
             android:gravity="center"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/ir_expeProfe"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@drawable/border_azul"
@@ -138,6 +140,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/ir_expeDiseInge"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:background="@drawable/border_azul"
@@ -156,6 +159,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/ir_logrosProfe"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:background="@drawable/border_azul"
@@ -174,6 +178,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/ir_partColeCam"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:background="@drawable/border_azul"
@@ -193,6 +198,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/ir_premiosDist"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:background="@drawable/border_azul"
@@ -211,6 +217,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/ir_aportaRele"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:background="@drawable/border_azul"
@@ -223,7 +230,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/caja_siguiente_tab"
+                android:id="@+id/caja_cerrarSesion"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_margin="10dp"
@@ -231,7 +238,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/ir_formAcademica"
+                    android:id="@+id/cerrar_sesion"
                     android:layout_width="120dp"
                     android:layout_height="70dp"
                     android:layout_margin="15dp"
