--- a/app/src/main/res/drawable/border_error.xml
+++ b/app/src/main/res/drawable/border_error.xml
@@ -5,5 +5,5 @@
         android:topRightRadius="10dp"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"/>
-    <stroke android:width="2dp" android:color="@color/negro"/>
+    <stroke android:width="2dp" android:color="@color/azul"/>
 </shape>
