--- a/app/src/main/res/layout/activity_capacitacion_docente.xml
+++ b/app/src/main/res/layout/activity_capacitacion_docente.xml
@@ -1347,31 +1347,23 @@
 
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/caja_siguiente_scroll2"
+                android:id="@+id/cajaActua_capaDocente"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="@color/blanco"
+                android:background="@drawable/border_error"
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/regresar_datos_formDocente"
+                    android:id="@+id/actua_capaDocente"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
                     android:layout_margin="15dp"
                     android:layout_marginTop="30dp"
-                    android:text="Regresar a formacion docente"
+                    android:text="Actualizar capacitacion docente"
                     android:textColor="@color/negro"
                     android:gravity="center"/>
-                <TextView
-                    android:id="@+id/ir_actuaDisciplinar"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="15dp"
-                    android:layout_marginTop="30dp"
-                    android:text="Ir a Actualizacion disciplinar"
-                    android:textColor="@color/negro"
-                    android:gravity="center"/>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
