--- a/app/src/main/res/layout/activity_formacion_docente.xml
+++ b/app/src/main/res/layout/activity_formacion_docente.xml
@@ -2646,7 +2646,7 @@
                     android:gravity="center"/>
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/caja_siguiente_scroll"
+                android:id="@+id/caja_formDocente"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
@@ -2654,23 +2654,15 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/regresar_datosBasic"
+                    android:id="@+id/actua_formDocente"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
                     android:layout_margin="15dp"
                     android:layout_marginTop="30dp"
-                    android:text="Regresar a datos basicos"
+                    android:text="Actualizar formacion docente "
                     android:textColor="@color/negro"
                     android:gravity="center"/>
-                <TextView
-                    android:id="@+id/ir_capDocente"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="15dp"
-                    android:layout_marginTop="30dp"
-                    android:text="Ir a Capacitacion Docente"
-                    android:textColor="@color/negro"
-                    android:gravity="center"/>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
