--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         <EditText
             android:layout_width="216dp"
             android:layout_height="wrap_content"
-            android:id="@+id/usuario"
+            android:id="@+id/correo"
             android:hint="correo_electronico"
             android:textSize="16dp"
             android:textColorHint="@color/negro"
@@ -45,7 +45,17 @@
             app:layout_constraintRight_toRightOf="parent"
             android:background="@drawable/icono_usuario"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <TextView
+        android:hint="Ingrese un correo valido."
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/negro"
+        android:textColorHint="@color/negro"
+        android:textSize="18dp"
+        android:layout_margin="3dp"
+        android:visibility="gone"
+        android:id="@+id/mensajeCorreo"
+        android:gravity="center"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="250dp"
         android:layout_height="52dp"
@@ -103,6 +113,17 @@
         android:layout_marginBottom="10dp"
         />
     <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/mensajeEntrando"
+        android:layout_height="70dp"
+        android:text="Iniciando sesión ..."
+        android:textSize="16dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/negro"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+    <TextView
         android:layout_width="120dp"
         android:id="@+id/registrar"
         android:layout_height="60dp"
@@ -117,17 +138,4 @@
         />
 
 
-    <TextView
-        android:layout_width="200dp"
-        android:id="@+id/recuperarContra"
-        android:layout_height="70dp"
-        android:text="Olvide mi contraseña"
-        android:textSize="20dp"
-        android:textColor="@color/negro"
-        android:gravity="center"
-        android:layout_marginBottom="10dp"
-        android:layout_gravity="center"
-        android:background="@drawable/border_error"
-        android:layout_marginTop="10dp"
-        />
 </LinearLayout>
