--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
             android:hint="pasword"
             android:textSize="16dp"
             android:textColorHint="@color/negro"
-            android:inputType="textPassword"
+            android:inputType="numberPassword"
             android:layout_marginHorizontal="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
