--- a/app/src/main/res/layout/activity_aportaciones_pe.xml
+++ b/app/src/main/res/layout/activity_aportaciones_pe.xml
@@ -13,6 +13,7 @@
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="@color/azul"
         android:visibility="visible">
 
 
@@ -20,47 +21,58 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/blanco"
+            android:background="@color/azul"
             android:gravity="center"
             android:orientation="vertical">
 
 
 
             <LinearLayout
+                android:background="@color/azul"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:background="@color/blanco"
+                android:layout_height="52dp"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:layout_margin="20dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:background="@color/blanco"
-                    android:gravity="center"
-                    android:text="Aportaciones relevantes a la mejora del PE"
-                    android:textColor="@color/negro"
-                    android:textSize="14dp"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="27dp"
-                android:background="@color/blanco"
-                android:gravity="left"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center"
+                    android:textColor="@color/blanco"
+                    android:textSize="15dp"
+                    android:text="Aportaciones relevantes a la mejora del PE"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="7dp"
+                android:layout_width="300dp"
+                android:layout_height="1dp"
+                android:layout_marginBottom="35dp"
+                android:background="@color/blanco"
+                android:gravity="center"
+                android:orientation="vertical" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/blanco"
+                android:gravity="center"
+                android:orientation="vertical" />
+            <LinearLayout
+                android:layout_marginTop="14dp"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:gravity="left"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="22dp"
                     android:layout_marginRight="20dp"
-                    android:background="@color/blanco"
-                    android:gravity="left"
+                    android:gravity="center"
+                    android:textColor="@color/blanco"
+                    android:textSize="17dp"
                     android:text="Descripcion de la aportacion"
-                    android:textColor="@color/negro"
-                    android:textSize="17dp" />
+                    />
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/caja_edit_aportacionPE"
@@ -70,25 +82,25 @@
                 android:layout_margin="10dp"
                 android:background="@color/blanco"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/aportacionPE_texto"
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@color/blanco"
                     android:gravity="top"
                     android:textColorHint="@color/negro"
                     android:textSize="17dp"/>
-                <ImageView
-                    android:id="@+id/guardar_aportacionPE"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_margin="15dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/palomita" />
-            </LinearLayout>
 
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/guardar_aportacionPE"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/palomita" />
             <LinearLayout
                 android:id="@+id/caja_aportacionPE_final"
                 android:layout_width="match_parent"
@@ -120,31 +132,22 @@
 
 
             <LinearLayout
-                android:id="@+id/caja_siguiente_scroll11"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                android:background="@color/blanco"
                 android:gravity="center"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:id="@+id/regresar_preDist"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
                     android:layout_margin="15dp"
                     android:layout_marginTop="30dp"
-                    android:text="Regresar a premios"
-                    android:textColor="@color/negro"
-                    android:gravity="center"/>
-                <TextView
-                    android:id="@+id/finalizar_formulario"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="15dp"
-                    android:layout_marginTop="30dp"
-                    android:text="Finalizar formulario"
-                    android:textColor="@color/negro"
-                    android:gravity="center"/>
+                    android:background="@drawable/border"
+                    android:gravity="center"
+                    android:textColor="@color/blanco"
+                    android:text="Actualizar seccion"
+                    />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
