--- a/app/src/main/res/layout/activity_gestion_academica.xml
+++ b/app/src/main/res/layout/activity_gestion_academica.xml
@@ -1433,7 +1433,7 @@
                     android:gravity="center"
                     android:textColor="@color/blanco"
                     android:text="Actualizar seccion"
-                    android:id="@+id/ir_productosAca"
+                    android:id="@+id/actuaGes"
 
                     />
             </LinearLayout>
